feat: Removendo abordagem de notification e feita as  implementações das páginas de Login e Register & do AuthService

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
@@ -4,6 +4,20 @@
     <ProjectReference Include="..\..\PetWorldOficial.Infrastructure\PetWorldOficial.Infrastructure\PetWorldOficial.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\Media\LogoPetWorld.png" />
+    <_ContentIncludedByDefault Remove="wwwroot\Media\PetWorld__3_-removebg-preview.png" />
+    <_ContentIncludedByDefault Remove="wwwroot\Media\user-circle-svgrepo-com (1).svg" />
+    <_ContentIncludedByDefault Remove="wwwroot\Media\user-circle-svgrepo-com (2).svg" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
