--- a/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
+++ b/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
@@ -1,5 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\PetWorldOficial.Domain\PetWorldOficial.Domain\PetWorldOficial.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
