--- a/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
+++ b/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Flunt" Version="2.0.5" />
+    <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
 
 </Project>
