--- a/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
+++ b/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
@@ -8,19 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PetWorldOficial.Domain\PetWorldOficial.Domain\PetWorldOficial.Domain.csproj" />
+    <ProjectReference Include="..\..\PetWorldOficial.Application\PetWorldOficial.Application\PetWorldOficial.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Mappings\" />
     <Folder Include="Persistence\Repositories\" />
   </ItemGroup>
+  
 
 </Project>
