--- a/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
+++ b/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
@@ -8,6 +8,19 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Product\Output\" />
+    <Folder Include="DTOs\Role\Output\" />
+    <Folder Include="DTOs\Supplier\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.4\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
