--- a/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
+++ b/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
@@ -12,4 +12,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+
 </Project>
