--- a/PetWorldOficial.Identity/PetWorldOficial.Identity/PetWorldOficial.Identity.csproj
+++ b/PetWorldOficial.Identity/PetWorldOficial.Identity/PetWorldOficial.Identity.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\PetWorldOficial.Domain\PetWorldOficial.Domain\PetWorldOficial.Domain.csproj" />
   </ItemGroup>
 
 </Project>
