feat: criado o ProductService

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True"
+    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
+    "AuthConnection": "Server=RODRIGO;Database=AuthPetWorld;User=sa;Password=1234;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
