--- a/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
+++ b/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
