--- a/PetWorldOficial.Identity/PetWorldOficial.Identity/PetWorldOficial.Identity.csproj
+++ b/PetWorldOficial.Identity/PetWorldOficial.Identity/PetWorldOficial.Identity.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\PetWorldOficial.Domain\PetWorldOficial.Domain\PetWorldOficial.Domain.csproj" />
+    <ProjectReference Include="..\..\PetWorldOficial.Application\PetWorldOficial.Application\PetWorldOficial.Application.csproj" />
   </ItemGroup>
 
 </Project>
