feat: removida camada Identity, implementando Schedule Repository e ScheduleMap

--- a/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
+++ b/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
@@ -15,6 +15,10 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Schedule\Input\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
