--- a/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
+++ b/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
@@ -7,17 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\PetWorldOficial.Application\PetWorldOficial.Application\PetWorldOficial.Application.csproj" />
-    <ProjectReference Include="..\..\PetWorldOficial.Identity\PetWorldOficial.Identity\PetWorldOficial.Identity.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
   
 
