--- a/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
+++ b/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure/PetWorldOficial.Infrastructure.csproj
@@ -15,6 +15,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\PetWorldOficial.Application\PetWorldOficial.Application\PetWorldOficial.Application.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
   
 
 </Project>
