--- a/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
+++ b/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
