--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
+    "DefaultConnection": "Server=tcp:pet-world.database.windows.net,1433;Initial Catalog=PetWorldDatabase;Persist Security Info=False;User ID=rodrigo;Password=Rod1234@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "AuthConnection": "Server=RODRIGO;Database=AuthPetWorld;User=sa;Password=1234;TrustServerCertificate=True"
   },
   "Logging": {
