--- a/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
+++ b/PetWorldOficial.Application/PetWorldOficial.Application/PetWorldOficial.Application.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
