feat: Criado método para agendar um serviço

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpeningHours": {
+    "Open": "08:00",
+    "Close" : "18:00"
+  }
 }
