--- a/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
