refactor: refatorado o método GetAvailableTimeQueryHandler

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=PetWorld;User=sa;Password=123;TrustServerCertificate=True",
+    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
     "AuthConnection": "Server=RODRIGO;Database=AuthPetWorld;User=sa;Password=1234;TrustServerCertificate=True"
   },
   "Logging": {
@@ -13,5 +13,11 @@
   "OpeningHours": {
     "Open": "08:00",
     "Close": "18:00"
+  },
+  "Settings": {
+    "Range": {
+      "DefaultRangeGrooming": 30,
+      "DefaultRangeVeterinary": 60
+    }
   }
 }
