fix: ajustando lógica de agendamento

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -16,8 +16,7 @@
   },
   "Settings": {
     "Range": {
-      "DefaultRangeGrooming": 30,
-      "DefaultRangeVeterinary": 60
+      "DefaultRangeServices": 30
     }
   }
 }
