--- a/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
@@ -20,6 +20,10 @@
       <ProjectReference Include="..\..\PetWorldOficial.Infrastructure\PetWorldOficial.Infrastructure\PetWorldOficial.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Views\Cart\" />
+    </ItemGroup>
+
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
