--- a/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
+++ b/PetWorldOficial.Domain/PetWorldOficial.Domain/PetWorldOficial.Domain.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
+    <PackageReference Include="Stripe.net" Version="47.0.0" />
   </ItemGroup>
 
 </Project>
