chore: update deploy file

--- a/.github/workflows/main_petworldoficial.yml
+++ b/.github/workflows/main_petworldoficial.yml
@@ -23,13 +23,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{ github.workspace }}/myapp  
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ github.workspace }}/myapp  
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,8 +44,8 @@ jobs:
         with:
           name: .net-app
 
-      - name: List files in the publish directory
-        run: ls -R ${{env.DOTNET_ROOT}}/myapp
+      - name: List contents of the output directory  
+        run: ls -R ${{ github.workspace }}/myapp  
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +53,4 @@ jobs:
         with:
           app-name: 'PetWorldOficial'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_92B59EF0ABBD422F9AB4B6AFD267FC7A }}
-          package: '${{env.DOTNET_ROOT}}/myapp/bin/Release/net8.0/publish'
-          slot-name: 'Production'
+          package: ${{ github.workspace }}/myapp  
