--- a/.github/workflows/main_petworldoficial.yml
+++ b/.github/workflows/main_petworldoficial.yml
@@ -23,13 +23,15 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./myapp  # Corrigindo o caminho para ./myapp
+        run: |
+          dotnet publish -c Release -o ${{ github.workspace }}/myapp
+          ls -R ${{ github.workspace }}/myapp  # Verificar imediatamente após a publicação se a pasta foi criada
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ./myapp  # Corrigindo o caminho para ./myapp
+          path: ${{ github.workspace }}/myapp  # Verificar o caminho correto
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
           name: .net-app
 
       - name: List contents of the output directory  
-        run: ls -R ./myapp  # Verificando se o conteúdo da pasta está correto
+        run: ls -R ${{ github.workspace }}/myapp  # Verificando conteúdo da pasta após o download
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,4 +55,4 @@ jobs:
         with:
           app-name: 'PetWorldOficial'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_92B59EF0ABBD422F9AB4B6AFD267FC7A }}
-          package: ./myapp  # Referenciando o caminho correto
+          package: ${{ github.workspace }}/myapp  # Garantir que o caminho esteja correto
