--- a/.github/workflows/main_petworld.yml
+++ b/.github/workflows/main_petworld.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - petworld
 
 on:
@@ -37,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -47,19 +44,19 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EBEB8C9C7019447093641CF3F22E9FB5 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2BF3CABEB54042748CB22BCC0DEB28E6 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4489AD15C6414E809C72E80D6D4EA089 }}
+          client-id: ${{ secrets.__clientidsecretname__ }}
+          tenant-id: ${{ secrets.__tenantidsecretname__ }}
+          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'petworld'
-          slot-name: 'Production'
-          package: .
-          
+          slot-name: 'production'
+          package: ${{env.DOTNET_ROOT}}/myapp
