--- a/.github/workflows/main_petworld.yml
+++ b/.github/workflows/main_petworld.yml
@@ -50,16 +50,9 @@ jobs:
           name: webapp  # Nome do artefato
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}  # Caminho onde o pacote será baixado
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_10E061A37DD448A0937F6534132645F4 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B8C2995FBDD34DA0885CA2463FC07B85 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_90116D34256D43D5AF46F7990C260970 }}
-
-      - name: Deploy to Azure Web App
+      - name: Login to Azure using Publish Profile
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'petworld'  # Nome do Web App no Azure
-          slot-name: 'Production'  # Slot do Web App (caso não use slots, pode deixar como 'Production')
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}  # Nome do segredo com o conteúdo do Publish Profile
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}  # Caminho para o pacote a ser implantado
