--- a/.github/workflows/main_petworld.yml
+++ b/.github/workflows/main_petworld.yml
@@ -1,58 +1,48 @@
-name: Build and Deploy ASP.Net Core App to Azure Web App - petworld
-
+name: Compilar e implantar o aplicativo .NET Core no aplicativo Web PetWorldOficial
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
-
+    - main
+env:
+  AZURE_WEBAPP_NAME: PetWorldOficial
+  AZURE_WEBAPP_PACKAGE_PATH: PetworldOficial.Presentation/PetworldOficial.MVC/published
+  CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 8.0.x
+  WORKING_DIRECTORY: PetworldOficial.Presentation/PetworldOficial.MVC
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.x'
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: Dotnet publish
-        run: dotnet publish -c Release -o ./publish  # Diretório onde os arquivos serão publicados
-
-      - name: Set environment variable for Azure Web App package path
-        run: echo "AZURE_WEBAPP_PACKAGE_PATH=./publish" >> $GITHUB_ENV  # Define o caminho do pacote para o deploy
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: webapp  # Nome do artefato
-          path: ./publish  # O caminho dos arquivos publicados
-
+    - uses: actions/checkout@v4
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+    - name: Test
+      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: webapp  # Nome do artefato
-          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}  # Caminho onde o pacote será baixado
-
-      - name: Login to Azure using Publish Profile
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'petworld'  # Nome do Web App no Azure
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}  # Nome do segredo com o conteúdo do Publish Profile
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}  # Caminho para o pacote a ser implantado
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
