--- a/.github/workflows/main_petworld.yml
+++ b/.github/workflows/main_petworld.yml
@@ -1,14 +1,18 @@
-name: Compilar e implantar o aplicativo .NET Core no aplicativo Web PetWorldOficial
+name: Build and Deploy ASP.Net Core App to Azure Web App - petworld
+
 on:
   push:
     branches:
-    - main
+      - main
+  workflow_dispatch:
+
 env:
-  AZURE_WEBAPP_NAME: PetWorldOficial
-  AZURE_WEBAPP_PACKAGE_PATH: PetworldOficial.Presentation/PetworldOficial.MVC/published
+  AZURE_WEBAPP_NAME: petworld  # Nome correto do seu app na Azure
+  AZURE_WEBAPP_PACKAGE_PATH: Petworld.Presentation/Petworld.MVC/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: PetworldOficial.Presentation/PetworldOficial.MVC
+  WORKING_DIRECTORY: Petworld.Presentation/Petworld.MVC
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +35,7 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -44,5 +49,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}  # Usando o segredo do Publish Profile
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
