chore: atualizando arquivo yml

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/PetworldOficial.MVC.csproj
@@ -27,4 +27,9 @@
         <ApplicationIcon>wwwroot\Images\faviconPaw.ico</ApplicationIcon>
       <UserSecretsId>87fc9a43-e663-4ab4-962c-17e0b29a75eb</UserSecretsId>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+    <IsTransformWebConfigEnabled>true</IsTransformWebConfigEnabled>
+</PropertyGroup>
 </Project>
