--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=PetWorld;User=sa;Password=123;TrustServerCertificate=True",
+    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
     "AuthConnection": "Server=RODRIGO;Database=AuthPetWorld;User=sa;Password=1234;TrustServerCertificate=True"
   },
   "Stripe": {
     "SecretKey": "your secret key",
-    "Publishable": "your publishable key"
+    "Publishable": "your publishable"
   },
   "Sendinblue": {
     "SMTP": "smtp host",
