fix: consertados bugs

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "",
-    "AuthConnection": "Server=RODRIGO;Database=AuthPetWorld;User=sa;Password=1234;TrustServerCertificate=True"
+    "AuthConnection": "Server=localhost;Database=AuthPetWorld;User=sa;Password=123;TrustServerCertificate=True"
   },
   "Stripe": {
     "SecretKey": "your secret key",
