feat: atualizado estilo de alguns botões

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
     "AuthConnection": "Server=localhost;Database=AuthPetWorld;User=sa;Password=123;TrustServerCertificate=True"
   },
   "Stripe": {
