--- a/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RODRIGO;Database=PetWorld;User=sa;Password=1234;TrustServerCertificate=True",
+    "DefaultConnection": "Server=tcp:petworld-server.database.windows.net,1433;Initial Catalog=petworld;Persist Security Info=False;User ID=petworld;Password=Pw123456789@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "AuthConnection": "Server=localhost;Database=AuthPetWorld;User=sa;Password=123;TrustServerCertificate=True"
   },
   "Stripe": {
